[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Wall/WallManager.gd" type="Script" id=1]
[ext_resource path="res://assets/ingamebgm.wav" type="AudioStream" id=2]
[ext_resource path="res://scenes/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Game/Game.gd" type="Script" id=4]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.466258, 1 )
colors = PoolColorArray( 0.0666667, 0.0901961, 0.290196, 1, 0.34492, 0.334625, 0.664063, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 200 )

[node name="Game" type="Node"]
pause_mode = 1
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 0, 135.75 )
scale = Vector2( 1, 272.5 )
texture = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="GUI" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.5
anchor_bottom = 0.222
margin_left = 56.0
margin_right = -3.05176e-05
margin_bottom = 24.04
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/GUI"]
anchor_right = 0.462
anchor_bottom = 0.484
margin_top = 8.0
margin_right = -0.0480003
margin_bottom = 9.024
text = "Punkte:
Level:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Punkte" type="Label" parent="CanvasLayer/GUI"]
margin_left = 56.0
margin_top = 8.0
margin_right = 104.0
margin_bottom = 22.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="CanvasLayer/GUI"]
margin_left = 56.0
margin_top = 26.0
margin_right = 104.0
margin_bottom = 40.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="WallManager" type="Node2D" parent="."]
position = Vector2( 640, 136 )
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="WallManager"]

[node name="DespawnArea" type="Area2D" parent="."]
position = Vector2( -200, 136 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DespawnArea"]
shape = SubResource( 3 )

[node name="GameTimer" type="Timer" parent="."]

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
bus = "BGM"

[connection signal="timeout" from="WallManager/SpawnTimer" to="WallManager" method="_on_SpawnTimer_timeout"]
